fix login/register page background image not properly scaled on mobile view

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,7 @@
 body {
-    background: url('../../assets/images/index-background.png') no-repeat;
+    background: url('../../assets/images/index-background.png') no-repeat center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
 }
